# AgentPulse

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  build.sh  dev.sh  package-lock.json  package.json  reload.sh  watch.sh
.github/workflows/: build.yml  release.yml
docs/: index.html  styles.css
docs/demo-app/: app.css  index.html  main.js  mock-tauri.js
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  hook_event.rs  hook_server.rs  hooks_configurator.rs  lib.rs  mori_bridge.rs  session.rs
