[package]
name = "agent-pulse"
version = "0.1.0"
description = "Cross-platform Dynamic Island monitor for AI coding assistant sessions"
authors = ["yazelin"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["net", "io-util", "rt", "sync", "macros", "time"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
rodio = { version = "0.20", default-features = false, features = ["mp3", "wav", "vorbis"] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
gdk = "0.18"
gtk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }
